Added first post

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: levy's website
+title: levy's page
 name: Lucas de Levy Oliveira
 email: lucasdelevy@gmail.com
 original_url: "http://lucasdelevy.com"
@@ -15,7 +15,7 @@ description: > # this means to ignore newlines until "baseurl:"
   I'm currently moving from Amazon AWS + Wordpress, so it's not fully setup yet. :-)
   You can check the original website at <a href="http://lucasdelevy.com">lucasdelevy.com</a>
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site
+url: "lucasdelevy.com" # the base hostname & protocol for your site
 facebook_username: lucasdelevy
 github_username:  lucasdelevy
 linkedin_username: lucasdelevy
