Initial page tests

--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,13 @@
 title: levy's page
 name: Lucas de Levy Oliveira
 email: lucasdelevy@gmail.com
-original_url: "http://lucasdelevy.com/welcome"
+original_url: "http://lucasdelevy.com"
 description: > # this means to ignore newlines until "baseurl:"
   Welcome to my page!
   I'm currently moving from Amazon AWS + Wordpress, so it's not fully setup yet. :-)
   You can check the original website at <a href="http://lucasdelevy.com">lucasdelevy.com</a>
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "lucasdelevy.com/welcome" # the base hostname & protocol for your site
+baseurl: "/welcome" # the subpath of your site, e.g. /blog
+url: "lucasdelevy.com" # the base hostname & protocol for your site
 facebook_username: lucasdelevy
 github_username:  lucasdelevy
 linkedin_username: lucasdelevy
