--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: levy's page
+title: levy @ 阪大
 name: Lucas de Levy Oliveira
 email: lucasdelevy@gmail.com
 original_url: "http://lucasdelevy.com"
