--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,12 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: levy @ 阪大
+title: levy @ Osaka University (阪大)
 name: Lucas de Levy Oliveira
 email: lucasdelevy@neuron.eei.eng.osaka-u.ac.jp
 original_url: "http://lucasdelevy.com"
 description: > # this means to ignore newlines until "baseurl:"
-  Welcome to my page!
-  I'm currently moving from Amazon AWS + Wordpress, so it's not fully setup yet. :-)
-  You can check the original website at <a href="http://lucasdelevy.com">lucasdelevy.com</a>
+  Welcome to my page! It is surely not yet complete, but I'll be adding information soon enough. :-)
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "lucasdelevy.com" # the base hostname & protocol for your site
 facebook_username: lucasdelevy
