--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: levy @ Osaka University (阪大)
+title: levy @ osaka university (阪大)
 name: Lucas de Levy Oliveira
 email: lucasdelevy@neuron.eei.eng.osaka-u.ac.jp
 original_url: "http://lucasdelevy.com"
