--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ original_url: "http://lucasdelevy.com"
 description: > # this means to ignore newlines until "baseurl:"
   Welcome to my page! It is surely not yet complete, but I'll be adding information soon enough. :-)
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "lucasdelevy.com" # the base hostname & protocol for your site
+url: "http://www.lucasdelevy.com" # the base hostname & protocol for your site
 facebook_username: lucasdelevy
 github_username:  lucasdelevy
 linkedin_username: lucasdelevy
